--- a/src/main/webapp/passengerview/passengerview.html
+++ b/src/main/webapp/passengerview/passengerview.html
@@ -57,7 +57,7 @@
                 <div id="body-content" style="float: left; margin-left: 25px; width: 35px; padding: 7px; font-weight: 500;">{{1}}</div><div style="float: left;"><input style="width: 230px; height: 25px;" type="text"></div><div style="float:left; padding-left: 20px;"><input style="width: 230px; height: 25px;" type="text"></div>  
             </div>
             <div style="margin-left: 460px; padding-top: 20px;">
-                <!--<a href="#confirm">--><input class="orangeButton" type="submit" value="SAVE" ng-click="addReserveInformation(firstName, lastName, email, phone)"><!--</a>--></div>
+                <a href="#confirm"><input class="orangeButton" type="submit" value="SAVE" ng-click="addReserveInformation(firstName, lastName, email, phone)"></a></div>
         </div>
 
         <div style="float: left; margin-left: 20px; margin-top: 35px;">
