Tried to make angularPost http

--- a/src/main/webapp/confirmationview/confirmationview.html
+++ b/src/main/webapp/confirmationview/confirmationview.html
@@ -102,7 +102,7 @@
                 </tr>
                 <tr class="textForm">
                     <td>flight time</td>
-                    <td style="font-weight: bold;">{{flightInfo.traveltime}}</td>
+                    <td style="font-weight: bold;">{{flightInfo.traveltime}} Minutes</td>
                 </tr>
                 <tr class="textForm">
                     <td>number of seats</td>
